<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fullsink</string>
    <string name="menuSongs">Songs</string>
    <string name="menuAlbums">Albums</string>
    <string name="menuArtists">Artists</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sockport">Socket Port</string>
    <string name="default_sockport">8887</string>
    <!-- Resolver is for testing this is if length <= 12  then call http://www.fullsink.com -->
    <string name="pref_srvadd">Resolver lt=18 Addr:Port</string>
    <string name="pref_httpdport">HTTPD Port</string>
    <string name="default_httpdport">8080</string>
    <string name="pref_onair">Start On Air</string>
    <string name="pref_download">Allow Downloads</string>
    <string name="action_photo">Name and Photo</string>
    <string name="photobutpick">Pick Photo</string>
    <string name="photobutclear">Clear Photo</string>
    <string name="action_ipaddress">Server Address</string>
    <string name="action_ssid">Wifi Network</string>
    <string name="action_help">Help</string>
    <string name="tunedin">has tuned in</string>
    <string name="tunedout">has tuned out</string>
    <string name="download">Downloading</string>
    <string name="downcanc">Download cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Open Wifi Settings</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_button_text">Are you sure you want to delete </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="order_alphabetical">Order Alphabetically</string>
    <string name="order_newest">Order by date (newest)</string>
    <string name="order_oldest">Order by date (oldest)</string>
    <string name="order">Order</string>
    <string name="warning">Warning:</string>
    <string name="playlist">Playlist</string>
    <string name="add_playlist">Add To Playlist</string>
    <string name="warning_connection_msg">It appears that you are not connected to the internet. If you want to share or surf music around you, please connect to a network</string>
    <string name="remove_from_playlist">Remove From Playlist</string>
    <string name="sort_order">Sort Order</string>
    <string name="help_html">
<![CDATA[
		

	<p>
			<strong><u>Summary</u></strong></p>
		<p>
			Fullsink is a music player which allows you to share music in real time with people and devices around you. Fullsink also allows you to download a song you tuned in to.</p>
		<p>
			<strong><u>To Listen To Your Songs</u></strong></p>
		<p>
			Add songs to Music folder on your SD card</p>
		<p>
			<strong><u>Deleting A Song</u></strong></p>
		<p>
			To delete a song long-press on the song to delete and click Delete Menu option.</p>
		<p>
			<strong><u>Tabs Navigation</u></strong></p>
		<p>
			You can switch between Songs Artist and Album tabs y clicking on the tab names or by swiping left or right. If you tap on the selected tab you can sort the displayed content alphabetically or by date in ascending or descending order.</p>
		<p>
			<strong><u>Broadcasting Mode</u></strong></p>
		<p>
			By default the broadcasting mode is ON, it is an icon at the top left corner. You can turn it ON and OFF by tapping on it.</p>
		<p>
			<strong><u>Surfing Mode</u></strong></p>
		<p>
			By default the broadcasting mode is OFF, tap on the icon in the top right corner and you will be taken to a new screen where you can discover what others with Fullsink app are listening to. You can select a person from the screen to listen to what they are listening to and to Download that song if you want. Make sure you are connected to the common Wi-fi&nbsp; network.</p>
		<p>
			<strong><u>No Wi-fi&nbsp; Connection - No Problem!</u></strong></p>
		<p>
			If you don&rsquo;t have a Wi-fi&nbsp; connection you can turn your phone into a hotspot and still broadcast your music, so that you can listen to the same track with your friends on a Subway or while camping. Go to your phone&#39;s settings and turn on the Portable Wi-fi Hotspot feature. Remember your Router Name (SSID). Your friend can then connect to your hotspot and you can listen to each other&rsquo;s songs.</p>
		<p>
			<strong><u>Listening On A PC</u></strong></p>
		<p>
			Make sure that your phone and computer are on the same Wi-fi&nbsp; Network. Go to&nbsp;<a href="http://www.fullsink.com">www.fullsink.com</a>&nbsp;in your pc or laptop browser. You will see your device or a list of other devices with Fullsink app inside the browser player. Select the one you want to listen to.</p>

		]]>
    </string>

</resources>