<?xml version="1.0" encoding="utf-8" ?>   
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  
    <CheckBoxPreference
        android:key="@string/pref_download"
        android:title="@string/pref_download"
        android:defaultValue="true"/>
    
    <CheckBoxPreference
        android:key="@string/pref_onair"
        android:title="@string/pref_onair"
        android:defaultValue="true" />
    
        <EditTextPreference
        android:key="@string/pref_srvadd"
        android:title="@string/pref_srvadd"
        android:defaultValue="" />
    
    <EditTextPreference
        android:key="@string/pref_sockport"
        android:title="@string/pref_sockport"
        android:defaultValue="@string/default_sockport" />
    
        <EditTextPreference
        android:key="@string/pref_httpdport"
        android:title="@string/pref_httpdport"
        android:defaultValue="@string/default_httpdport" />
</PreferenceScreen>