<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center" >

    <RadioGroup
        android:id="@+id/order_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/alphabetical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/order_alphabetical" />

        <RadioButton
            android:id="@+id/newest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_newest" />

        <RadioButton
            android:id="@+id/oldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_oldest" />

        <RadioButton
            android:id="@+id/playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist" />
    </RadioGroup>

</LinearLayout>